# Sokoban_Solver

./: .gitignore  Astar.cpp  Astar.h  CMakeLists.txt  Map.cpp  Map.h  graph.cpp  graph.h  main.cpp  sokobanSolver.cpp  sokobanSolver.h  solver.txt
Sokoban_solver/: Astar.cpp  Astar.h  CMakeLists.txt  Map.cpp  Map.h  graph.cpp  graph.h  inputMap.txt  main.cpp  sokobanSolver.cpp
inputMaps/: 2017-competation-map.txt  Sokoban2.txt  Sokoban3.txt  Sokoban4.txt  Sokoban5.txt
outputImages/: map.ppm  map_deadlocks.ppm
output_path/: outPlan.txt  outPlanDebug.txt
